# Didi

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
addons/didi/: didi.gdextension  didi.gdextension.uid  didi_gdscript_guide.md
demo/: project.godot
examples/: space-flight.md  tetris.md
examples/space-flight/: project.godot  space.tscn
examples/space-flight/space/: asteroid_field.gd  asteroid_field.gd.uid  camera_shake.gd  camera_shake.gd.uid  hud.gd  hud.gd.uid  ship.gd  ship.gd.uid  sound.gd  sound.gd.uid  starfield.gd  starfield.gd.uid
examples/tetris/: main.tscn  project.godot
examples/tetris/addons/didi/: didi_gdscript_guide.md
examples/tetris/tetris/: board.gd  board.gd.uid  game.gd  game.gd.uid  preview.gd  preview.gd.uid  sfx.gd  sfx.gd.uid  tetromino.gd  tetromino.gd.uid
src/: didi_editor_plugin.cpp  didi_editor_plugin.h  didi_server.cpp  didi_server.h  register_types.cpp  register_types.h
